--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 affected communities are the ones that are already living in very poor conditions and low economy
                 households.please help them.
             </p>
-            <a class="button" href="">Donate Now</a>
+            <a class="button" href="">Donate</a>
 
         </div>
     </div>
